--- a/index.html
+++ b/index.html
@@ -4,8 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MySite</title>
+    <link rel="stylesheet" href="style.css">
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Cormorant+Infant:ital,wght@0,300..700;1,300..700&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+<div class="restarant-list">
+    <div class="card">
+        <img src="https://koko.by/storage/thumbs/pinned/631/w450_h200_q90_k5xYwSl8SDxxTaeKxsQX.jpg" alt="картинка1">
+        <div class="card-content">
+            <div class="card-label">Минск <span class="dot">•</span> Ресторан</div>
+            <h3>Bulbashy / Бульбашы на Герцена</h3>
+            <p>В среднем от 50 руб.</p>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="https://koko.by/storage/thumbs/pinned/5/w450_h200_q90_0eMwEsOM6cTGSt5tl03f.jpg" alt="картинка2">
+        <div class="card-content">
+            <div class="card-label">Минск <span class="dot">•</span> Ресторан</div>
+            <h3>Ronin / Ронин</h3>
+            <p>В среднем от 60 руб.</p>
+        </div>
+    </div>
+
+     <div class="card">
+        <img src="https://koko.by/storage/thumbs/pinned/319/w450_h200_q90_XRyySERPK9N0e2w08k7R.jpg" alt="картинка3">
+        <div class="card-content">
+            <div class="card-label">Минск <span class="dot">•</span> Ресторан</div>
+            <h3>Bergamo / Бергамо</h3>
+            <p>В среднем от 70 руб.</p>
+        </div>
+    </div>
+
+</div>    
 </body>
 </html>
