--- a/login.html
+++ b/login.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styleLogin.css">
     <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=lock" />
+  <link href='https://cdn.boxicons.com/fonts/brands/boxicons-brands.min.css' rel='stylesheet'>
+
 </head>
 <body>
 
@@ -20,7 +22,7 @@
                 </div>
                 <div class="input-box">
                     <input type="password" placeholder="Password" required>
-                    <i class="bx bxs-user"></i>   
+                    <i class="bx bxs-lock"></i>   
                 </div>
                 <div class="forgot-link">
                     <a href="#">Forgot password?</a>
@@ -28,10 +30,10 @@
                 <button type="submit" class="btn">Login</button>
                 <p>or login with social platforms</p>
                 <div class="social-icons">
-                    <a href="#"><i class="bx bxl-google"></i></a>
-                    <a href="#"><i class="bx bxl-facebook"></i></a>
-                    <a href="#"><i class="bx bxl-github"></i></a>
-                    <a href="#"><i class="bx bxl-linkedin"></i></a>
+                    <a href="#"><i class='bxl  bx-google'></i> </i></a>
+                    <a href="#"><i class='bxl bx-facebook'></i> </a>
+                    <a href="#"><i class="bxl bx-github"></i></a>
+                    <a href="#"><i class="bxl bx-linkedin"></i></a>
                 </div>
             </form>
         </div>
@@ -61,9 +63,12 @@
                     <a href="#"><i class="bx bxl-linkedin"></i></a>
                 </div>
             </form>
+
+
+            
         </div>
 <div class="toggle-box">
-    <div class="toggle-panel toggle-left">
+    <div class="toggle-pannel toggle-left">
         <h1>Hello, Welcome!</h1>
         <p>Don't have an account?</p>
         <button class="btn register-btn">Register</button>
@@ -71,7 +76,7 @@
 </div>
 
 <div class="toggle-box">
-    <div class="toggle-panel toggle-right">
+    <div class="toggle-pannel toggle-right">
         <h1>Welcome Back!</h1>
         <p>Already have an account?</p>
         <button class="btn login-btn">Login</button>
